--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,15 @@
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   font-weight: normal;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  width: 100vw;
 }
 
 a,
@@ -23,11 +30,29 @@ a,
   body {
     display: flex;
     place-items: center;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
+}
+
+/* Override Vuetify container classes */
+.v-container.container-fluid {
+  max-width: 100% !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+/* Override Vuetify app padding */
+.v-application__wrap {
+  min-height: 100vh;
+  padding: 0 !important;
 }
